--- a/index.html
+++ b/index.html
@@ -1,151 +1,175 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Главная</title>
     <!-- =fallback заменяем =swap не скачет шрифт-->
     <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&amp;family=Roboto:wght@400;500;700;900&amp;display=fallback"
-        rel="stylesheet" />
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&amp;family=Roboto:wght@400;500;700;900&amp;display=fallback"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./CSS/normalize.css" />
     <link rel="stylesheet" href="./CSS/style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <!-- шапка, навигация -->
-        <nav>
-            <p class="logo">
-                <a href="#" class="focused"><span class="logo-blue">Web</span>Studio</a>
-            </p>
-            <ul class="main-menu list">
-                <li class="main-menu item">
-                    <a href="#" class="focused current">Студия</a>
-                </li>
-                <li class="main-menu item">
-                    <a href="./portfolio.html" class="focused">Портфолио</a>
-                </li>
-                <li class="main-menu-item">
-                    <a href="#contact" class="focused">Контакты</a>
-                </li>
-            </ul>
+      <!-- шапка, навигация -->
+      <div class="nav-container">
+        <nav class="header">
+          <p class="logo">
+            <a href="#" class="focused"><span class="logo-blue">Web</span>Studio</a>
+          </p>
+          <ul class="main-menu list">
+            <li class="item">
+              <a href="#" class="focused current">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="focused">Портфолио</a>
+            </li>
+            <li class="main-menu item">
+              <a href="#contact" class="focused">Контакты</a>
+            </li>
+          </ul>
         </nav>
         <!-- шапка, контакты контакты не навигация!-->
         <ul class="main-menu contact list">
-            <li class="main-menu contact item">
-                <a href="mailto:info@devstudio.com" class="focused contact-link">info@devstudio.com</a>
-            </li>
-            <li class="main-menu contact item">
-                <a href="tel:+380961111111" class="focused contact-link">+38 096 111 11 11</a>
-            </li>
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="focused contact-link">info@devstudio.com</a>
+          </li>
+          <li class="item">
+            <a href="tel:+380961111111" class="focused contact-link">+38 096 111 11 11</a>
+          </li>
         </ul>
+      </div>
     </header>
     <!-- тело -->
     <main class="main-content">
-        <!-- баннер -->
-
-        <div class="picture-banner">
-            <section>
-                <h1 class="order-title">Эффективные решения<br />для вашего бизнеса</h1>
-                <a href="#" class="button">Заказать услугу</a>
-            </section>
+      <!-- баннер -->
+      <section class="maxindented picture-banner">
+        <div class="container-banner">
+          <h1 class="order-title">Эффективные решения<br />для вашего бизнеса</h1>
+          <a href="#" class="button">Заказать услугу</a>
         </div>
+      </section>
+      <!--  особенности -->
+      <section>
+        <div class="container">
+          <h2 class="features-title">Особенности</h2>
+          <!-- скрыть элемент -->
+          <ul class="list flexlist featureslist">
+            <li class="fourrowel featureselement">
+              <h3 class="features-uppercase">Внимание к деталям</h3>
+              <p class="featurestext">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="fourrowel featureselement">
+              <h3 class="features-uppercase">Пунктуальность</h3>
+              <p class="featurestext">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="fourrowel featureselement">
+              <h3 class="features-uppercase">Планирование</h3>
+              <p class="featurestext">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="fourrowel featureselement">
+              <h3 class="features-uppercase">Современные технологии</h3>
+              <p class="featurestext">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- чем мы занимаемся -->
+      <section class="indented">
+        <div class="container">
+          <h2>Чем мы занимаемся</h2>
+          <ul class="list flexlist dolist">
+            <li class="flexelement doelement">
+              <img src="./images/box1.jpg" alt="photo" width="370" class="img" />
+            </li>
+            <li class="flexelement doelement">
+              <img src="./images/box2.jpg" alt="photo" width="370" class="img" />
+            </li>
+            <li class="flexelement doelement">
+              <img src="./images/box3.jpg" alt="photo" width="370" class="img" />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- наша команда -->
 
-        <!--  особенности -->
-        <section class="features">
-            <h2 class="features-title">Особенности</h2>
-            <!-- скрыть элемент  -->
+      <section class="indented team">
+        <div class="container">
+          <h2>Наша команда</h2>
+          <ul class="list flexlist comlist">
+            <li class="item fourrowel comelement">
+              <!-- <a href="" class="link"> -->
+              <img src="./images/team1.jpg" alt="photo" width="270" class="img" />
+              <div class="middling comcontent">
+                <h4 class="name">Игорь Демьяненко</h4>
+                <p class="subtitle">Product Designer</p>
+              </div>
+              <!-- </a> -->
+            </li>
+            <li class="item fourrowel comelement">
+              <!-- <a href="" class="link">-->
+              <img src="./images/team2.jpg" alt="photo" width="270" class="img" />
+              <div class="middling comcontent">
+                <h4 class="name">Ольга Репина</h4>
+                <p class="subtitle">Frontend Developer</p>
+              </div>
+              <!-- </a> -->
+            </li>
+            <li class="item fourrowel comelement">
+              <!-- <a href="" class="link"> -->
+              <img src="./images/team3.jpg" alt="photo" width="270" class="img" />
+              <div class="middling comcontent">
+                <h4 class="name">Николай Тарасов</h4>
+                <p class="subtitle">Marketing</p>
+              </div>
+              <!-- </a> -->
+            </li>
+            <li class="item fourrowel comelement">
+              <!-- <a href="" class="link">-->
+              <img src="./images/team4.jpg" alt="photo" width="270" class="img" />
 
-            <ul class="features-list list">
-                <li class="features-list-item">
-                    <p class="features-uppercase">Внимание к деталям</p>
-                    <span class="features-list-text">Идейные соображения, а также начало повседневной работы по
-                        формированию
-                        позиции.</span>
-                </li>
-                <li class="features-list-item">
-                    <p class="features-uppercase">Пунктуальность</p>
-                    <span class="features-list-text">Задача организации, в особенности же рамки и место обучения кадров
-                        влечет за собой.
-                    </span>
-                </li>
-                <li class="features-list-item">
-                    <p class="features-uppercase">Планирование</p>
-                    <span class="features-list-text">Равным образом консультация с широким активом в значительной
-                        степени
-                        обуславливает.</span>
-                </li>
-                <li class="features-list-item">
-                    <p class="features-uppercase">Современные технологии</p>
-                    <span class="features-list-text">
-                        Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                    </span>
-                </li>
-            </ul>
-        </section>
-        <!-- чем мы занимаемся -->
-        <section class="direction">
-            <h2 class="direction-title">Чем мы занимаемся</h2>
-            <ul class="direction-list list">
-                <li class="direction-list-item">
-                    <img src="images/box1.jpg" alt="photo" width="370" />
-                </li>
-                <li class="direction-list-item">
-                    <img src="images/box2.jpg" alt="photo" width="370" />
-                </li>
-                <li class="direction-list-item">
-                    <img src="images/box3.jpg" alt="photo" width="370" />
-                </li>
-            </ul>
-        </section>
-        <!-- наша команда -->
-        <section class="team">
-            <h2 class="team-title">Наша команда</h2>
-            <ul class="time-list list">
-                <li class="team-list item">
-                    <img src="images/team1.jpg" alt="photo" width="270" />
-                    <h4 class="name">Игорь Демьяненко</h4>
-                    <p class="subtitle">Product Designer</p>
-                </li>
-                <li class="team-list item">
-                    <img src="images/team2.jpg" alt="photo" width="270" />
-                    <h4 class="name">Ольга Репина</h4>
-                    <p class="subtitle">Frontend Developer</p>
-                </li>
-                <li class="team-list item">
-                    <img src="images/team3.jpg" alt="photo" width="270" />
-                    <h4 class="name">Николай Тарасов</h4>
-                    <p class="subtitle">Marketing</p>
-                </li>
-                <li class="team-list item">
-                    <img src="images/team4.jpg" alt="photo" width="270" />
-                    <h4 class="name">Михаил Ермаков</h4>
-                    <p class="subtitle">UI Designer</p>
-                </li>
-            </ul>
-        </section>
+              <div class="middling comcontent">
+                <h4 class="name">Михаил Ермаков</h4>
+                <p class="subtitle">UI Designer</p>
+              </div>
+              <!-- </a> -->
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!-- подвал, лого и контакты -->
     <footer id="contact" class="main-footer">
-        <p class="logo">
-            <a href="#" class="focused logo-half"><span class="logo-blue">Web</span>Studio</a>
+      <div class="container">
+        <p class="footer logo">
+          <a href="#" class="focused logo-half"><span class="logo-blue">Web</span>Studio</a>
         </p>
-        <address class="main-footer-addressbar">
-            г. Киев, пр-т Леси Украинки, 26
-        </address>
+        <address class="main-footer-addressbar">г. Киев, пр-т Леси Украинки, 26</address>
         <address>
-            <ul class="list">
-                <li>
-                    <a href="mailto:info@devstudio.com" class="focused contact-link-footer">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+380961111111" class="focused contact-link-footer">+38 096 111 11 11</a>
-                </li>
-            </ul>
+          <ul class="footerlist list">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="focused contact-link-footer"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="focused contact-link-footer">+38 096 111 11 11</a>
+            </li>
+          </ul>
         </address>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
