--- a/portfolio.html
+++ b/portfolio.html
@@ -45,10 +45,11 @@
   </header>
   <!-- тело -->
   <main class="main-content">
-    <h1 class="features-title">Портфолио</h1>
-    <!-- Скрыть элемент h1 -->
-    <!-- Фильтр -->
-    <section class="container indented">
+    <section class="container indented border">
+      <h1 class="features-title">Портфолио</h1>
+      <!-- Скрыть элемент h1 -->
+      <!-- Фильтр -->
+
       <div class="minindented">
         <nav>
           <h2 class="features-title">Фильтр</h2>
