--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li class="item">
             <a href="./portfolio.html" class="focused">Портфолио</a>
           </li>
-          <li class="main-menu item">
+          <li class="item">
             <a href="#contact" class="focused">Контакты</a>
           </li>
         </ul>
