--- a/portfolio.html
+++ b/portfolio.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <!-- шапка, навигация -->
-    <div class="nav-container">
-      <nav class="header">
+    <div class="container">
+      <nav class="flexnav">
         <p class="logo">
           <a href="#" class="focused"><span class="logo-blue">Web</span>Studio</a>
         </p>
