--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <!-- шапка, навигация -->
-    <div class="nav-container">
-      <nav class="header">
+    <div class="container">
+      <nav class="flexnav">
         <p class="logo">
           <a href="#" class="focused"><span class="logo-blue">Web</span>Studio</a>
         </p>
-        <ul class="main-menu list">
+        <ul class="list main-menu">
           <li class="item">
             <a href="#" class="focused current">Студия</a>
           </li>
@@ -34,7 +34,7 @@
         </ul>
       </nav>
       <!-- шапка, контакты контакты не навигация!-->
-      <ul class="main-menu contact list">
+      <ul class="list main-menu contact">
         <li class="item">
           <a href="mailto:info@devstudio.com" class="focused contact-link">info@devstudio.com</a>
         </li>
@@ -48,36 +48,42 @@
   <main class="main-content">
     <!-- баннер -->
     <section class="maxindented picture-banner">
-      <div class="container-banner">
+      <div class="container container-banner">
         <h1 class="order-title">Эффективные решения<br />для вашего бизнеса</h1>
         <a href="#" class="button">Заказать услугу</a>
       </div>
     </section>
+    <!-- <section class="maxindented picture-banner">
+      <div class="container-banner">
+        <h1 class="order-title">Эффективные решения<br />для вашего бизнеса</h1>
+        <a href="#" class="button">Заказать услугу</a>
+      </div>
+    </section> -->
     <!--  особенности -->
     <section>
       <div class="container">
         <h2 class="features-title">Особенности</h2>
         <!-- скрыть элемент -->
         <ul class="list flexlist featureslist">
-          <li class="fourrowel featureselement">
+          <li class="fourrowel">
             <h3 class="features-uppercase">Внимание к деталям</h3>
             <p class="featurestext">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
-          <li class="fourrowel featureselement">
+          <li class="fourrowel">
             <h3 class="features-uppercase">Пунктуальность</h3>
             <p class="featurestext">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li class="fourrowel featureselement">
+          <li class="fourrowel">
             <h3 class="features-uppercase">Планирование</h3>
             <p class="featurestext">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li class="fourrowel featureselement">
+          <li class="fourrowel">
             <h3 class="features-uppercase">Современные технологии</h3>
             <p class="featurestext">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -90,14 +96,14 @@
     <section class="indented">
       <div class="container">
         <h2>Чем мы занимаемся</h2>
-        <ul class="list flexlist dolist">
-          <li class="flexelement doelement">
+        <ul class="list flexlist">
+          <li class="flexelement">
             <img src="./images/box1.jpg" alt="photo" width="370" class="img" />
           </li>
-          <li class="flexelement doelement">
+          <li class="flexelement">
             <img src="./images/box2.jpg" alt="photo" width="370" class="img" />
           </li>
-          <li class="flexelement doelement">
+          <li class="flexelement">
             <img src="./images/box3.jpg" alt="photo" width="370" class="img" />
           </li>
         </ul>
